--- a/package.json
+++ b/package.json
@@ -9,7 +9,16 @@
   },
   "dependencies": {
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "@opentelemetry/api": "^1.9.0",
+    "@opentelemetry/auto-instrumentations-web": "^0.42.0",
+    "@opentelemetry/context-zone": "^1.28.0",
+    "@opentelemetry/exporter-trace-otlp-http": "^0.55.0",
+    "@opentelemetry/instrumentation": "^0.55.0",
+    "@opentelemetry/resources": "^1.28.0",
+    "@opentelemetry/sdk-trace-web": "^1.28.0",
+    "@opentelemetry/semantic-conventions": "^1.27.0",
+    "zone.js": "^0.15.0"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.3.1",
